tests/baselines/reference/parseJsxExtends1(strict=true).errors.txt
index.tsx(5,12): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.


==== index.tsx (1 errors) ====
    declare const React: any;
    
    export function Foo() {
        // No error; "const" is lowercase and therefore intrinsic.
        return <const T extends/>
               ~~~~~~~~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    }
    